syntax = "proto3";
package protobuf;

option go_package = "github.com/cmd-stream/cmd-stream-examples-go/strandard_protobuf/main";

// protoc --go_out=. --go_opt=paths=source_relative ./standard_protobuf/cmd_data.proto

message Eq1Data {
  int64 a = 1;
  int64 b = 2;
  int64 c = 3;
}

message Eq2Data {
  int64 a = 1;
  int64 b = 2;
  int64 c = 3;
}

message ResultData {
  int64 r = 1;
}